fixtures/valid/15-v0.5-full/input.anatomy
anatomy_version = "0.5"
tagline = "Full v0.5 fixture — all new fields present."

[identity]
fingerprint = "jtambp6hxrw6sdkdsnfk"

[identity.stack]
id = "typescript"
hash = "jtamb"

[identity.form]
id = "typescript-library"
hash = "p6hxr"

[identity.domain]
id = "developer-tooling"
hash = "w6sdk"

[identity.function]
id = "anatomy-file-validator"
hash = "dsnfk"

[[structure.entries]]
path = "src/"
purpose = "Core source modules"
kind = "source"
convention = "each file exports one derive*() function"

[[interface.exports]]
symbol = "validate"
kind = "function"
summary = "Validate a .anatomy file against the schema"
signature = "(input: string, opts?: ValidateOpts) => ValidationResult"

[[architecture.invariants]]
rule = "Pass 1 must remain deterministic — no AI calls, no network, no randomness."

[[architecture.invariants]]
rule = "TOML is hand-rendered; never replace the renderer with a serializer library."

[generated]
at = 2026-05-06T12:00:00.000Z
commit = "b68bee0"
by = "anatomy-cli@0.5.0"
model = "none"
schema = "https://anatomy.dev/spec/0.5/schema.json"
