fixtures/invalid/29-v0.8-has-code-profile/input.anatomy
anatomy_version = "0.8"
tagline = "v0.8 file with [code_profile.exports] — should be rejected by additionalProperties"

[identity]
stack = "typescript"
form = "library"
domain = "developer-tools"
function = "anatomy-format-helper"
fingerprint = "g0bwqynxj5tnqb6e1fyq"

[code_profile.exports]
count = 5
sample = ["validate", "validateMemory", "discoverAllAnatomies"]

[generated]
at = 2026-05-08T00:00:00.000Z
by = "anatomy-cli@0.10.0"
model = "none"
schema = "https://anatomy.dev/spec/0.8/schema.json"
